# Meister-Eder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  chainlit.md  chainlit.toml  chat_app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: proposal-persistent-resume.md
openspec/: config.yaml
openspec/changes/define-project-scope/: design.md  proposal.md  tasks.md
openspec/changes/email-based-conversation-matching/: design.md  proposal.md  tasks.md
openspec/changes/email-loop-prevention/: design.md  proposal.md  tasks.md
openspec/changes/email-reply-to-addresses/: design.md  proposal.md  tasks.md
openspec/changes/implement-web-chat/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/registration-confirmation-email/: design.md  proposal.md  tasks.md
public/: accessibility.js  custom.css
src/: config.py  llm.py
src/agent/: core.py  prompts.py  response_parser.py
src/channels/: email_channel.py
src/knowledge_base/: loader.py
src/models/: conversation.py  registration.py
src/notifications/: context.py  i18n.py  notifier.py  renderer.py
src/notifications/i18n/: de.yaml  en.yaml
src/notifications/templates/: admin_new.txt.j2  (+3 more)
src/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/storage/: json_store.py
src/utils/: tokens.py
tests/: conftest.py  test_agent.py  test_email_loop_prevention.py  test_knowledge_base.py  test_llm.py  test_models.py  test_notifier.py  test_persistent_resume.py  test_prompts.py  test_storage.py
(+30 files in other folders)
