[project]
name = "meister-eder"
version = "0.1.0"
description = "AI-powered conversational registration agent for Spielgruppe Pumuckl"
requires-python = ">=3.11"
dependencies = [
    # At least one AI provider SDK is required; both are included so the
    # operator can choose at runtime via the AI_PROVIDER env variable.
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Configuration
    "python-dotenv>=1.0.0",
    # Registration schema validation
    "jsonschema>=4.23.0",
]

[project.scripts]
meister-eder = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
